# gene_HEll

./: 2_encoders.cpp  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  aux.h  client.cpp  cmake_install.cmake  compare  evalution.cpp  evalution.h  gene.cpp  gene.h  gene_random.cpp  gene_random.h  index  networking.cpp  networking.h  server.cpp  use
